[project]
name = "fuhnance"
version = "0.1.0"
description = "Contains all the code for crawling and calculating finance data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dagster",
  "dagster-cloud",
  "boto3",
  "pandas",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "dagster-webserver",
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "fuhnance.definitions"
code_location_name = "fuhnance"